Fixed the selected tracks / artists border overlay problem on the generated tab & thicker border selected
someone complained that the selected border is hard to see on the tree.
i fixed the weird thick border being next to each other, to a nice over
layer.
fixed the styling again by changing the font size on the tab +
description..

hopefully this is my last commit.. I’m getting picky over small things
atm. lol

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -517,11 +517,12 @@ a {
 }
 
 .trackBox {
+    font-size: .8em;
     position: relative;
     width: 90%;
     padding: 5%;
     background-color: #212938;
-    border: .5px solid #1f2126;
+    outline: .5px solid #1f2126;
     color: #959da0;
 }
 
@@ -559,6 +560,7 @@ a {
 
 .tablink {
   flex: 1;
+  font-size: .9em;
   margin-right: 4px;
   padding: 12px;
   color: #fff;
@@ -585,6 +587,7 @@ a {
 
 .tablink: hover {
   color: #212938;
+
 }
 
 .tablink.is-active {
@@ -634,6 +637,7 @@ a {
     letter-spacing: 0.86px;
     text-decoration: none;
     padding: 3px;
+    text-indent:2%;
     font-weight: normal;
 }
 
